# wazuh-mcp-server

./: .editorconfig  .env.example  .flake8  .gitignore  ARCHITECTURE.md  CLIENT_README.md  Dockerfile  ENV_MIGRATION.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  PRODUCTION_READY.md  README.md  README_NEW.md  SIMPLE_README.md  SUCCESS.md  __main__.py  advanced_client.py  all_in_one.py  client-sse.py  client.py  client_requirements.txt  debug_server.py  demo.py  env_config.py  example_clusters.yml  examples.py  generated_clusters.yml  integration.py  integration_example.py  interactive_client.py  langchain_example.py  openai_client.py  pyproject.toml  quickstart.py  requirements.in  requirements.txt  run_client.py  run_server.py  server.py  (+9 more)
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  publish.yml
scripts/: build.sh
src/: __init__.py
src/tools/: __init__.py  tool_filter.py  tool_params.py  tools.py  utils.py
src/wazuh_mcp_server/: __main__.py  client.py  clusters_information.py  helper.py  streaming_server.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_server.py
wazuh_mcp_server/: __init__.py  __main__.py  client.py  config.py  exceptions.py  py.typed  server.py
